--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <link rel="stylesheet" href="https://f.zly.vg/css/details.css">
 <title>Lingyu Zhou</title>
 <style>
-
+h1,h2,h3,h4,h5{font-weight:normal;}
 :root{
     --mainColor:white;
     --subColor:black;
+    --cfont:'haas';
 }
 
 *{
@@ -57,9 +58,9 @@ nav>div#click{
         display: none;
     }
 
-    /* *,html,body{
-        font-size: smaller;
-    } */
+    *,html,body{
+        /* font-size: smaller; */
+    }
 
 }
 
@@ -87,7 +88,7 @@ nav>div#click{
 
 </style>
 </head>
-<body style="font-family: passenger; margin: 0; background-color: var(--subColor); line-height: 95%;">
+<body style="font-family: var(--cfont); margin: 0; background-color: var(--subColor); line-height: 95%;">
 <nav style="padding:0; line-height: initial; width: 100%; display: flex; color:var(--mainColor); border-bottom: 1px solid var(--mainColor); z-index: 99; background-color: var(--subColor); position: sticky; top:0">
 <div id='click' class="index" onclick="window.location.href=window.location.href;" style="margin-left:.5em; "></div>
 <div style="margin: auto;"></div>
