--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@ h1,h2,h3,h4,h5{font-weight:normal;}
 :root{
     --mainColor:white;
     --subColor:black;
-    --cfont:'haas';
+    --cfont:'scto';
+    /* --cfont:'courierprime'; */
 }
 
 *{
