--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ h1,h2,h3,h4,h5{font-weight:normal;}
 :root{
     --mainColor:white;
     --subColor:black;
-    --cfont:'scto';
+    --cfont:'passenger';
     /* --cfont:'courierprime'; */
 }
 
@@ -87,6 +87,9 @@ nav>div#click{
   color:var(--mainColor);
 }
 
+.info>a{
+  width: fit-content;
+}
 /* Title of the card */
 .title {
   position: relative;
@@ -130,7 +133,8 @@ nav>div#click{
 
     div.hmenu{
         /* margin: auto .5em auto 1em; */
-        margin: 0; border-left: 1px solid var(--mainColor); display: flex; padding: 0 .5em;
+        margin: 0; border-left: 1px solid var(--mainColor); display: flex; padding: .5em ;
+        font-size: smaller;
     }
 
     div.hmenu>a{
@@ -146,10 +150,10 @@ nav>div#click{
 
 </style>
 </head>
-<body style="font-family: var(--cfont); margin: 0; background-color: var(--subColor); line-height: 95%;">
+<body style="font-family: var(--cfont); margin: 0; background-color: var(--subColor); line-height: 100%;">
 <nav style="padding:0; line-height: initial; width: 100%; display: flex; color:var(--mainColor); border-bottom: 1px solid var(--mainColor); z-index: 99; background-color: var(--subColor); position: sticky; top:0">
 <div id='click' class="index" onclick="window.location.href=window.location.href;" style="margin-left:.5em; "></div>
-<div style="margin: auto;"></div>
+<div style="margin: auto; "></div>
 <!-- <div class="hmenu" style=""> -->
     <div class="hmenu"><a href="https://zly.vg/cv.pdf">Résumé</a></div>
     <div class="hmenu"><a href="https://blog.zhoulingyu.net">Blog</a></div>
@@ -159,7 +163,9 @@ nav>div#click{
     <div class="hmenu" id="hmenuItemLast"><a href="https://xolyn.github.io/fg2.html">Font&nbsp;Studio</a></div>
 <!-- </div> -->
 
-<div id='click' class="vmenu" style="margin: 0 .5em;" onclick="showMenu();">≡</div>
+<div id='click' class="vmenu" style="margin: 0 .5em; display: flex;" onclick="showMenu();">
+  <div style="margin: auto;">≡</div>
+</div>
 <!-- this.innerHTML=this.innerHTML==='&times;'?'≡':'&times;'; -->
 </nav>
 
