--- a/fontcss.html
+++ b/fontcss.html
@@ -176,13 +176,15 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
 
 
 <article>
+    <!-- <span style="letter-spacing: -23px; font-size: xx-large;">&nearr;&swarr;</span> -->
 <p>
     Then edit and refer to the preview below to choose fonts you like to use them by corresponding alias(es).<br>
     You can click on names followed by an asterisk (＊) to see its bolder font weight.
 </p>
 
 <div style="display: flex; align-items: center; font-family: BDLifelessGrotesk;; position: sticky; top:0; background-color: white; padding: 1em 0;">
-    <label translate="no" for="fontSizeRange" style="">A&UpDownArrow; &nbsp;</label>
+    <label translate="no" for="fontSizeRange" style="">A&updownarrow;</label>
+    <!-- &#10530; -->
     <input type="range" id="fontSizeRange" name="fontSizeRange" min="5" max="95" value="16">
     <!-- <span style="font-size: x-large;font-family: fsk;" translate="no">&nbsp;A</span> -->
     <label translate="no" for="letterSpaceRange" style="line-height: 60%; margin-left: 1em;">
