--- a/fontcss.html
+++ b/fontcss.html
@@ -423,6 +423,11 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
             <legend >david</legend>
             <div style="font-family:david;" class="usrtxt" contenteditable ></div>
         </fieldset>
+
+        <fieldset>
+            <legend id="var" >mayo</legend>
+            <div style="font-family:mayo;" class="usrtxt" contenteditable ></div>
+        </fieldset>
     </div>
 
 </article>
