--- a/fontcss.html
+++ b/fontcss.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang='en'>
 <head>
@@ -427,6 +425,11 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
         <fieldset>
             <legend id="var" >mayo</legend>
             <div style="font-family:mayo;" class="usrtxt" contenteditable ></div>
+        </fieldset>
+
+        <fieldset>
+            <legend id="var" >akkurat</legend>
+            <div style="font-family:akkurat;" class="usrtxt" contenteditable ></div>
         </fieldset>
     </div>
 
