--- a/index.html
+++ b/index.html
@@ -182,6 +182,12 @@ div#toolbar{
     }
 }
 
+@media only screen and (min-width: 700px) and (min-height: 700px) {
+  * {
+    /* zoom:1.05; */
+  }
+}
+
 </style>
 </head>
 <body style="font-family: var(--cfont); margin: 0; background-color: var(--subColor); line-height: 100%;">
