--- a/glyph.html
+++ b/glyph.html
@@ -58,6 +58,10 @@ a{
     color:inherit;
 }
 
+label{
+    cursor: pointer;
+}
+
 @media (orientation: landscape) {
     article{
         font-size: larger;
@@ -66,8 +70,11 @@ a{
 </style>
 </head>
 <body style="margin: 0; font-family: passenger;"> 
+    <footer style="background-color: black; padding: 2em; color: white;">
+        <h1>Differences of glyphs in Chinese fonts among different regions</h1> 
+        <p style=" color: lightgray;">Oct 18, 2024</p>
+    </footer>
 <article>
-    <h1>Differences of glyphs in Chinese fonts among different regions</h1>
     <p>
         <!-- The differences in Chinese font glyphs among various regions reflect distinct cultural and linguistic preferences. In regions like Mainland China, Simplified Chinese is the standard, with fonts designed to reflect the simplified characters used in everyday writing. In contrast, Taiwan and Hong Kong primarily use Traditional Chinese, where fonts feature more complex and traditional character forms. These regional variations in fonts can be subtle yet significant, with different shapes, strokes, and even proportions of glyphs, catering to the specific writing systems and typographical aesthetics favored by each area. -->
     
