--- a/glyph.html
+++ b/glyph.html
@@ -71,7 +71,7 @@ label{
 </head>
 <body style="margin: 0; font-family: passenger;"> 
     <footer style="background-color: black; padding: 2em; color: white;">
-        <h1>Differences of glyphs in Chinese fonts among different regions</h1> 
+        <h1>Differences of glyphs in Chinese characters among different regions</h1> 
         <p style=" color: lightgray;">Oct 18, 2024</p>
     </footer>
 <article>
