--- a/glyph.html
+++ b/glyph.html
@@ -6,7 +6,7 @@
 <link rel='stylesheet' href='https://xolyn.github.io/font.css'>
 <link rel='stylesheet' href='https://xolyn.github.io/ir.css'>
 
-<title>Document</title>
+<title>Glyphs</title>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Noto+Sans+SC:wght@100..900&family=Noto+Sans+TC:wght@100..900&display=swap');
 input[type='radio'] {
