--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ div#toolbar{
     <div class="hmenu"><a href="https://xolyn.github.io/proj">Projects</a></div>
     <div class="hmenu"><a href="https://portfolio.zhoulingyu.net">Portfolio</a></div>
     <div class="hmenu"><a href="https://drive.zhoulingyu.net" translate="no">ZDrive</a></div>
-    <div class="hmenu" id="hmenuItemLast"><a href="https://xolyn.github.io/fg.html">Font&nbsp;Studio</a></div>
+    <div class="hmenu" id="hmenuItemLast"><a href="https://xolyn.github.io/fg2.html">Font&nbsp;Studio</a></div>
 <!-- </div> -->
 
 <div id='click' class="vmenu" style="margin: 0 .5em; display: flex;" onclick="showMenu();" >
