--- a/fontcss.html
+++ b/fontcss.html
@@ -431,6 +431,11 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
             <legend id="var" >akkurat</legend>
             <div style="font-family:akkurat;" class="usrtxt" contenteditable ></div>
         </fieldset>
+
+        <fieldset>
+            <legend >karla</legend>
+            <div style="font-family:karla;" class="usrtxt" contenteditable ></div>
+        </fieldset>
     </div>
 
 </article>
