--- a/5999proj/index.html
+++ b/5999proj/index.html
@@ -17,13 +17,15 @@
 }
 
 a.dl{
-    padding: 5px;
+    padding: 8px;
     transition: .35s;
+    color:inherit;
 }
 
 a.dl:hover{
     background-color: lightgray;
     border-radius: 8px;
+    color:white;
 }
 img{
     width: 100%;
@@ -187,9 +189,9 @@ transition: top .5s;
 <section> <h2 id="References-Data_sources">References-Data_sources</h2>
      <img src="images/slide_27.png" alt=""></section>
 <section> <h2 id="SourceDownload">⤓ Get notebook and TeX source file</h2>
-<div style="padding: 2rem;">
+<div style="padding: 4vw;">
     <h3>Get notebook and TeX source file</h3>
-<a class="dl" href="#" style="color: inherit; text-decoration: none;"><span style="font-family:'Bootstrap-icons'; ">&#xF30A;</span> Download</a>
+<a class="dl" href="https://github.com/xolyn/5999proj" style="text-decoration: none;"><span style="font-family:'Bootstrap-icons'; ">&#xF30A;</span> Download</a>
 </div>
 </section>
 
@@ -197,7 +199,7 @@ transition: top .5s;
 <!-- <img src="images/slide_28.png" alt=""> -->
 
 
-<div style="padding: 2rem; border-top: .5px solid lightgray;">
+<div style="padding: 2rem 4vw; border-top: .5px solid lightgray;">
     &copy;Lingyu Zhou 2024
 </div>
 
