--- a/5999proj/index.html
+++ b/5999proj/index.html
@@ -1,15 +1,17 @@
+<!-- Author: Lingyu Zhou -->
 <!DOCTYPE html>
 <html lang='en'>
 <head>
 <meta charset='UTF-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 <link rel='stylesheet' href='https://xolyn.github.io/font.css'>
+<link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/11242/11242369.png">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tocbot/4.30.0/tocbot.min.js"></script>
 <link rel="preconnect" href="https://rsms.me/">
 <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tocbot/4.30.0/tocbot.css">
 <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css'>
-<title>Document</title>
+<title>China's Soybean Import Time Series Analysis: Modeling and Prediction</title>
 <style>
 *{
     font-family: Inter, sans-serif;
@@ -208,7 +210,6 @@ tocbot.init({
 tocSelector: '.js-toc',
 contentSelector: '#ppt',
 headingSelector: 'h2',
-headingsOffset:0,
 });
 
 
